[gd_scene load_steps=5 format=3 uid="uid://8yhwbxbujhk0"]

[ext_resource type="FontFile" uid="uid://d184prmg7do1n" path="res://fonts/Xolonium-Regular.ttf" id="1_jr3i8"]
[ext_resource type="Script" path="res://hud.gd" id="1_rxpqx"]

[sub_resource type="InputEventAction" id="InputEventAction_edqr2"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_475nd"]
events = [SubResource("InputEventAction_edqr2")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rxpqx")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_jr3i8")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_jr3i8")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -160.0
offset_right = 89.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_jr3i8")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_475nd")
text = "Start"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
